# wildfire-robotics

./: .dockerignore  .gitignore  .gitleaks.toml  .semgrep.yml  Cargo.toml  LICENSE  README.md  deny.toml  rust-toolchain.toml  skills-lock.json
.cargo/: config.toml
.claude/: proven-config.json
.claude-flow/: CAPABILITIES.md  config.yaml  daemon-state.json  harness-active-policy.json  memory-package.json
.claude-flow/metrics/: backup.json  codebase-map.json  consolidation.json  harness-loop.json  learning.json  performance.json  security-audit.json  swarm-activity.json  test-gaps.json  v3-progress.json
.claude-flow/security/: audit-status.json
.config/: nextest.toml
.github/workflows/: quality.yml  release-evidence.yml
.plans/: aerial-fire-blanket-implementation-prompts.md  arial-fire-blanket.md  deep-research.md  implementation-prompts.md  plan.md  research.md
.swarm/: memory.db  schema.sql
.swarm/backups/: memory-2026-07-21T09-33-17-699Z.db
contracts/: generate.sh  registry.toml  release-registry.toml
contracts/baseline/: wildfire-v1.binpb
contracts/examples/: assignment_issued.v1.json  authority_grant_changed.v1.json  battery_eligibility_changed.v1.json  blanket_activated.v1.json  blanket_configuration_promoted.v1.json  capability_attested.v1.json  constraint_published.v1.json  (+42 more)
crates/aerial-deployment-operations/: Cargo.toml
crates/aerial-deployment-operations/benches/: qualification_campaign.rs
crates/aerial-deployment-operations/src/: airborne.rs  commands.rs  configuration.rs  domain.rs  effectiveness.rs  errors.rs  events.rs  ground.rs  ids.rs  lib.rs  mission.rs  operator.rs  payload.rs  recovery.rs  simulation.rs  value.rs
crates/aerial-deployment-operations/tests/: airborne_deployment.rs  architecture_firewall.rs  configuration_promotion.rs  effectiveness_release.rs  ground_installation.rs  mission_release.rs  operator_api.rs  payload_manifest.rs  qualification_harness.rs  recovery_accounting.rs
crates/api-gateway/: Cargo.toml
crates/api-gateway/src/: http.rs  lib.rs  main.rs
crates/api-gateway/tests/: http_adapter.rs  prompt27_gateway.rs
crates/audit-ledger/: Cargo.toml
crates/audit-ledger/src/: lib.rs
crates/audit-ledger/tests/: ledger.rs
crates/contracts-generated/: Cargo.toml  build.rs
crates/contracts-generated/src/: conformance.rs  lib.rs
crates/contracts-generated/tests/: wire_compatibility.rs
crates/digital-twin/: Cargo.toml
crates/digital-twin/benches/: fault_campaign.rs
crates/digital-twin/src/: lib.rs
crates/digital-twin/tests/: prompt29.rs
crates/edge-reconciliation/: Cargo.toml
crates/edge-reconciliation/src/: lib.rs
crates/edge-reconciliation/tests/: reconciliation.rs
crates/fleet-operations/: Cargo.toml
crates/fleet-operations/benches/: million_identities.rs
crates/fleet-operations/examples/: collaboration_qualification.rs
crates/fleet-operations/src/: assets.rs  cells.rs  collaboration.rs  lib.rs
crates/fleet-operations/tests/: prompt10_fleet.rs  prompt25_collaboration.rs
crates/identity-access/: Cargo.toml
crates/identity-access/src/: approval.rs  crypto.rs  domain.rs  domain_tests.rs  grant.rs  lib.rs  offline.rs  policy.rs  ports.rs  verifier.rs
crates/infrastructure-recovery/: Cargo.toml
crates/infrastructure-recovery/src/: lib.rs
crates/infrastructure-recovery/tests/: recovery.rs
crates/messaging-core/: Cargo.toml
crates/messaging-core/benches/: partition_reconnect.rs
crates/messaging-core/src/: delivery.rs  envelope.rs  lib.rs  ports.rs  replay.rs  request.rs  store_forward.rs  subject.rs  topology.rs
crates/messaging-core/tests/: acceptance.rs  fault_campaign.rs
crates/messaging-nats/: Cargo.toml
crates/messaging-nats/src/: lib.rs
crates/messaging-nats/tests/: jetstream_integration.rs
crates/object-manifest/: Cargo.toml
crates/object-manifest/src/: lib.rs
crates/operations-core/: Cargo.toml
crates/operations-core/src/: config.rs  lib.rs  slo.rs  telemetry.rs  traceability.rs
crates/operations-core/tests/: promotion_trace.rs
crates/persistence-postgres/: Cargo.toml
crates/persistence-postgres/migrations/: 0001_persistence_primitives.sql
crates/persistence-postgres/src/: lib.rs
crates/persistence-postgres/tests/: postgres_integration.rs
crates/scale-qualification/: Cargo.toml
crates/scale-qualification/benches/: million_assets.rs
crates/scale-qualification/src/: lib.rs  main.rs
crates/scale-qualification/tests/: qualification.rs
crates/shared-kernel/: Cargo.toml
crates/shared-kernel/src/: error.rs  geo.rs  identity.rs  lib.rs  metadata.rs  numeric.rs  time.rs
crates/shared-kernel/tests/: deserialization_boundaries.rs  properties.rs  type_safety.rs
crates/shared-kernel/tests/ui/: identifier_confusion.rs  identifier_confusion.stderr  scope_confusion.rs  scope_confusion.stderr
crates/vehicle-integration/: Cargo.toml
crates/vehicle-integration/examples/: cohort_relay_qualification.rs
crates/vehicle-integration/src/: coordination.rs  domain.rs  lib.rs  mavlink.rs  ros2.rs  simulator.rs
crates/vehicle-integration/tests/: prompt12_gateway.rs  prompt22_coordination.rs
deploy/: README.md
fixtures/persistence-service/: Cargo.toml  README.md  RESTORE.md  ROLL_FORWARD.md  migration-policy.toml  wildfire-sbom.json
fixtures/persistence-service/migrations/: 000001_expand_canonical_name.sql  000002_backfill_canonical_name.sql  000003_switch_canonical_reads.sql  000004_contract_legacy_name.sql
fixtures/persistence-service/src/: lib.rs
release/: architecture-deviations.toml  field-evidence-status.toml  invariant-traceability.toml  rc-manifest.toml  traceability.toml  unresolved-risks.toml
scripts/: generate-sbom.sh  npm-sbom.mjs  validate-typescript.sh
tools/: quality-tools.toml
tools/contract-check/: Cargo.toml
tools/contract-check/src/: main.rs
tools/evidence-manifest/: Cargo.toml
tools/evidence-manifest/src/: main.rs
tools/migration-check/: Cargo.toml
tools/migration-check/src/: lib.rs  main.rs
tools/release-gate/: Cargo.toml
tools/release-gate/src/: main.rs
tools/release-gate/tests/: release_gate.rs
(+308 files in other folders)
