[package]
name = "aerial-deployment-operations"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
thiserror.workspace = true

[features]
default = []
test-fixtures = []

[lints]
workspace = true
