[package]
name = "aerial-deployment-operations"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion = "0.5.1"
serde_json.workspace = true

[[bench]]
name = "qualification_campaign"
harness = false

[features]
default = []
test-fixtures = []

[lints]
workspace = true
