[package]
name = "audit-ledger"
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.97.1"
publish = false
description = "Tamper-evident audit chain and independent safety/security audit ports"

[dependencies]
chrono = { version = "0.4.41", default-features = false, features = ["serde", "std"] }
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.9"
thiserror = "2.0.12"

[dev-dependencies]
futures = "0.3.31"

[lints]
workspace = true
