[package]
name = "wildfire-contracts-generated"
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.97.1"
publish = false
description = "Isolated generated Protobuf bindings and wire conformance helpers"

[dependencies]
prost = "0.14.1"
prost-types = "0.14.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.151"
sha2 = "0.10.9"
thiserror = "2.0.12"

[build-dependencies]
prost-build = "0.14.1"
protoc-bin-vendored = "3.2.0"

[dev-dependencies]
tempfile = "3.20.0"

[lints]
workspace = true
