[package]
name = "digital-twin"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
hmac.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "fault_campaign"
harness = false

[lints]
workspace = true
