[package]
name = "fleet-operations"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
thiserror.workspace = true
shared-kernel.workspace = true
sha2.workspace = true
hmac.workspace = true

[dev-dependencies]
criterion = "0.5.1"
proptest.workspace = true

[lints]
workspace = true

[[bench]]
name = "million_identities"
harness = false
