[package]
name = "identity-access"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
shared-kernel.workspace = true

[dev-dependencies]
proptest.workspace = true
uuid.workspace = true

[lints]
workspace = true
