[package]
name = "messaging-nats"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false
description = "NATS JetStream adapter for the Wildfire Robotics messaging ports"

[dependencies]
async-nats = { version = "0.50.0", default-features = false, features = ["jetstream", "ring", "server_2_12"] }
futures = "0.3.31"
messaging-core = { path = "../messaging-core", version = "0.1.0" }
shared-kernel.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "time"] }

[lints]
workspace = true

[dev-dependencies]
chrono.workspace = true
operations-core = { path = "../operations-core", version = "0.1.0" }
testcontainers = "0.27.3"
testcontainers-modules = { version = "0.15.0", features = ["nats"] }
uuid.workspace = true
