[package]
name = "operations-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
shared-kernel.workspace = true
thiserror.workspace = true

[lints]
workspace = true
