[package]
name = "wildfire-persistence-postgres"
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.97.1"
publish = false
description = "Reusable PostgreSQL transactions, outbox/inbox, leases, and migration primitives"

[dependencies]
chrono = { version = "0.4.41", default-features = false, features = ["clock", "serde", "std"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.151"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "postgres", "chrono", "uuid", "json", "migrate", "macros"] }
thiserror = "2.0.12"
uuid = { version = "1.16.0", features = ["serde", "v4"] }

[dev-dependencies]
testcontainers = "0.27.3"
testcontainers-modules = { version = "0.15.0", features = ["postgres"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
