[package]
name = "shared-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
proptest.workspace = true
serde_json.workspace = true
trybuild.workspace = true

[lints]
workspace = true
