[package]
name = "vehicle-integration"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
mavlink-adapter = []
ros2-adapter = []

[dependencies]
chrono.workspace = true
serde.workspace = true
thiserror.workspace = true
shared-kernel.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
