[package]
name = "persistence-migration-fixture"
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.97.1"
publish = false

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
