[package]
name = "contract-check"
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.97.1"
publish = false

[dependencies]
prost-types = "0.14.1"
prost = "0.14.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.151"
sha2 = "0.10.9"
toml = "0.8.23"
wildfire-contracts-generated = { path = "../../crates/contracts-generated", version = "0.1.0" }

[lints]
workspace = true
