[package]
name = "evidence-manifest"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json = "1.0.151"
sha2.workspace = true
toml = "0.8.23"

[lints]
workspace = true
