[package]
name = "migration-check"
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.97.1"
publish = false

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.9"
toml = "0.9.5"
thiserror = "2.0.12"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
missing_errors_doc = "allow"
